--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "extendable-media-recorder": "^9.2.0",
     "react": "^18.2.0",
+    "react-audio-voice-recorder": "^2.2.0",
     "react-dom": "^18.2.0",
     "react-media-recorder": "^1.6.6",
     "react-native": "^0.73.6",
