--- a/frontend/package.json
+++ b/frontend/package.json
@@ -13,6 +13,7 @@
   "dependencies": {
     "@emotion/styled": "^11.11.5",
     "@mui/material": "^5.15.15",
+    "axios": "^1.7.2",
     "extendable-media-recorder": "^9.2.0",
     "react": "^18.2.0",
     "react-audio-voice-recorder": "^2.2.0",
